<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JSONexample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bt_json_simple">Ver ejemplo de JSON simple</string>
    <string name="title_activity_jsonsimple">JSONSimple</string>
    <string name="tx_texto_cabecera">Introduce los datos de la persona</string>
    <string name="tx_texto_nombre">Nombre:</string>
    <string name="ed_nombre">Introduzca el nombre...</string>
    <string name="tx_texto_edad">Edad:</string>
    <string name="ed_edad">Introduzca la edad...</string>
    <string name="bt_terminar">Mostrar con método getXXX()</string>
    <string name="tx_texto_formato">Formato del JSON:</string>
    <string name="tx_texto_recuperacion_datos">Recuperación de los datos:</string>

    <color name="blue">#00BFFF</color>

    <string name="title_activity_jsonarray">JSONArray</string>

    <string name="bt_json_array">Ver ejemplo de JSON array</string>

    <string name="bt_mostrar2">Mostrar con método optXXX()</string>

    <string name="bt_terminar_array">Mostrar</string>

    <string name="tx_titulo">Objetos JSON</string>
    <color name="color_fondo_main">#98FB98</color>

</resources>
