<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.juanvi.jsonsimple.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tx_texto_cabecera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/tx_texto_cabecera"
            android:textSize="@dimen/tx_texto_cabecera_dimen" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/tx_texto_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tx_texto_nombre" />

            <EditText
                android:id="@+id/ed_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/ed_nombre"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tx_texto_edad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tx_texto_edad" />

            <EditText
                android:id="@+id/ed_edad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/ed_edad"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_terminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bt_terminar_array" />

        <TextView
            android:id="@+id/tx_texto_formato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tx_texto_formato" />

        <TextView
            android:id="@+id/tx_formato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/tx_texto_recuperacion_datos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tx_texto_recuperacion_datos" />

        <TextView
            android:id="@+id/tx_recuperacion_datos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue" />

    </LinearLayout>
    
</ScrollView>